# intrinsicsTest

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/cpuinfo/: CMakeLists.txt  main.cpp
src/simdCheck/: CMakeLists.txt  simdCheck.hpp
src/test/: CMakeLists.txt  intrinsicsComputation.cpp  intrinsicsComputation.hpp  main.cpp  sequentialComputation.cpp  sequentialComputation.hpp  timer.hpp  utils.cpp  utils.hpp
