cmake_minimum_required(VERSION 3.20)

project(AvxCheck)

# set(CMAKE_BUILD_TYPE Release)
# set(CMAKE_BUILD_TYPE Debug)

add_subdirectory(src)


# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ROOT}/out/release)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ROOT}/out/debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out)